[gd_scene load_steps=17 format=2]

[ext_resource path="res://Afterlife Crisis Ver2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/UI/shop stuff/Grave (unpressed).png" type="Texture" id=2]
[ext_resource path="res://src/ChooseSpawners.gd" type="Script" id=3]
[ext_resource path="res://Assets/Grave (Zombie Spawner).png" type="Texture" id=4]
[ext_resource path="res://Assets/Urn (Ghost Spawner).png" type="Texture" id=5]
[ext_resource path="res://Assets/Coffin (Vampire Spawner).png" type="Texture" id=6]
[ext_resource path="res://Assets/Cauldron Icon.png" type="Texture" id=7]
[ext_resource path="res://Assets/Void Icon.png" type="Texture" id=8]
[ext_resource path="res://Assets/Previous Spawner (Unpressed).png" type="Texture" id=9]
[ext_resource path="res://Assets/Next Spawner (pressed).png" type="Texture" id=10]
[ext_resource path="res://Assets/Previous Spawner (pressed).png" type="Texture" id=11]
[ext_resource path="res://Assets/Next Spawner (Unpressed).png" type="Texture" id=12]
[ext_resource path="res://Assets/Continue (Unpressed).png" type="Texture" id=13]
[ext_resource path="res://Assets/Continue (pressed).png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="ChooseSpawners" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
SLIME_SPAWNER_TEXTURE = ExtResource( 7 )
GHOST_SPAWNER_TEXTURE = ExtResource( 5 )
ZOMBIE_SPAWNER_TEXTURE = ExtResource( 4 )
VAMPIRE_SPAWNER_TEXTURE = ExtResource( 6 )
REAPER_SPAWNER_TEXTURE = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.309804, 0.560784, 0.729412, 1 )

[node name="ChooseLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -462.5
margin_top = 150.0
margin_right = 462.5
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Choose your spawners"

[node name="LeftSpawner" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Spawner" type="TextureRect" parent="LeftSpawner"]
margin_left = 150.0
margin_top = 253.0
margin_right = 350.0
margin_bottom = 453.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Label" type="Label" parent="LeftSpawner"]
margin_left = 150.0
margin_top = 481.0
margin_right = 354.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 2 )
text = "Vampire"
align = 1
valign = 1

[node name="LL" type="TextureButton" parent="LeftSpawner"]
margin_left = 97.0
margin_top = 471.0
margin_right = 137.0
margin_bottom = 511.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="LR" type="TextureButton" parent="LeftSpawner"]
margin_left = 366.0
margin_top = 471.0
margin_right = 406.0
margin_bottom = 511.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="MiddleSpawner" type="Control" parent="."]
margin_left = 350.0
margin_right = 390.0
margin_bottom = 40.0

[node name="Spawner" type="TextureRect" parent="MiddleSpawner"]
margin_left = 150.0
margin_top = 253.0
margin_right = 350.0
margin_bottom = 453.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Label" type="Label" parent="MiddleSpawner"]
margin_left = 150.0
margin_top = 481.0
margin_right = 354.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 2 )
text = "Vampire"
align = 1
valign = 1

[node name="ML" type="TextureButton" parent="MiddleSpawner"]
margin_left = 97.0
margin_top = 471.0
margin_right = 137.0
margin_bottom = 511.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="MR" type="TextureButton" parent="MiddleSpawner"]
margin_left = 366.0
margin_top = 471.0
margin_right = 406.0
margin_bottom = 511.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="RightSpawner" type="Control" parent="."]
margin_left = 700.0
margin_right = 740.0
margin_bottom = 40.0

[node name="Spawner" type="TextureRect" parent="RightSpawner"]
margin_left = 150.0
margin_top = 253.0
margin_right = 350.0
margin_bottom = 453.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Label" type="Label" parent="RightSpawner"]
margin_left = 150.0
margin_top = 481.0
margin_right = 354.0
margin_bottom = 512.0
custom_fonts/font = SubResource( 2 )
text = "Vampire"
align = 1
valign = 1

[node name="RL" type="TextureButton" parent="RightSpawner"]
margin_left = 97.0
margin_top = 471.0
margin_right = 137.0
margin_bottom = 511.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 11 )
expand = true

[node name="RR" type="TextureButton" parent="RightSpawner"]
margin_left = 366.0
margin_top = 471.0
margin_right = 406.0
margin_bottom = 511.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="Button" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.0
margin_top = -78.0
margin_right = 122.0
margin_bottom = -39.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LeftSpawner/LL" to="." method="_on_LL_pressed"]
[connection signal="pressed" from="LeftSpawner/LR" to="." method="_on_LR_pressed"]
[connection signal="pressed" from="MiddleSpawner/ML" to="." method="_on_ML_pressed"]
[connection signal="pressed" from="MiddleSpawner/MR" to="." method="_on_MR_pressed"]
[connection signal="pressed" from="RightSpawner/RL" to="." method="_on_RL_pressed"]
[connection signal="pressed" from="RightSpawner/RR" to="." method="_on_RR_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
